Fix spacing around registry links on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -108,6 +108,12 @@ section h2 {
   }
 }
 
+/* Registry Links */
+.registry-link {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
 /* RSVP Embedded */
 #rsvp-embed {
   padding-top: 5px;
